# Atoapi

./: .gitignore  BASELINE.md  CURRENT_WORKFLOW.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.playwright-cli/: page-2026-07-14T10-04-57-187Z.yml  page-2026-07-14T10-59-31-253Z.yml  page-2026-07-14T10-59-55-748Z.yml  page-2026-07-18T05-34-19-630Z.yml  page-2026-07-18T06-43-22-499Z.yml  page-2026-07-18T06-43-44-871Z.yml  page-2026-07-18T06-46-16-621Z.yml  (+215 more)
src/: App.tsx  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: codex-ui-patcher.mjs  codex-ui-replace.ps1
src-tauri/src/: agent_injection.rs  cache.rs  codex_ui_patch.rs  continuation_lineage.rs  crypto.rs  lib.rs  main.rs  metrics.rs  metrics_history.rs  persistence.rs  state.rs
src-tauri/src/admin/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/proxy/: action_scope.rs  affinity_identity.rs  attempt_gate.rs  cache_affinity.rs  cache_capability.rs  cache_control_core.rs  cache_directed_relay.rs  cache_validation.rs  codex_chat_common.rs  completion_relay.rs  continuation_scope.rs  final_scope_shadow.rs  final_scope_waterline.rs  generation_envelope.rs  json_canonical.rs  mod.rs  prefix_control.rs  prefix_guard.rs  prepared_wire_request.rs  request_plan.rs  responses_stream.rs  responses_websocket_probe.rs  session_identity.rs  settlement_pipeline.rs  sse.rs  streaming_chat_anthropic.rs  streaming_codex_anthropic.rs  streaming_codex_chat.rs  streaming_responses_anthropic.rs  streaming_responses_chat.rs  transform_codex_chat.rs  transport.rs  wire_fixture_tests.rs
(+49 files in other folders)
