[package]
name = "atoapi"
version = "0.1.99"
description = "Local desktop AI agent proxy with protocol switching, caching, and metrics."
authors = ["Atoapi"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "atoapi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "atoapi"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.93"
async-stream = "0.3.6"
axum = { version = "0.7.9", features = ["macros"] }
base64 = "0.22.1"
bytes = "1.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0.1"
futures-util = "0.3.31"
flate2 = "1.0.35"
http = "1.1.0"
rand = "0.8.5"
reqwest = { version = "0.12.9", default-features = false, features = ["http2", "json", "rustls-tls", "stream", "system-proxy"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9"
sha2 = "0.10.8"
tauri = { version = "2.1.1", features = [] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
toml = "0.8.19"
toml_edit = "0.22.27"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_Memory", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
json5 = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
